--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -10,7 +10,7 @@
     <BODY>
 
         <header class="top_header">
-            <h1>HBnB</h1>
+            <H1>HBNB</H1>
             <nav>
                 <ul>
                     <li><a href="#">Places to stay</a></li>
