--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,6 +4,6 @@
 		<TITLE>HBNB</TITLE>
 	</HEAD>
 	<BODY>
-		<h1>Number: {{ n }} is {{ "odd" if n % 2 != 0 else "even" }}</h1>
+		<H1>Number: {{ n }} is {{ "odd" if n % 2 != 0 else "even" }}</H1>
 	</BODY>
 </HTML>
