--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -4,7 +4,7 @@
 		<TITLE>HBNB</TITLE>
 	</HEAD>
 	<BODY>
-		<h1>States</h1>
+		<H1>States</H1>
 		<UL>
 			{% for state in states %}
 			<LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
